[package]
name = "redis-health-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
prometheus = { version = "0.13.0" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.18", features = ["server", "http1", "tcp"] }
reqwest = { version = "0.11.10" , features = ["blocking"]}
futures = "0.3"
redis = { version = "0.21.0", features = ["tokio-comp", "aio", "connection-manager"]}
protobuf = { version = "^2.0" }
